# DameCplusplus

./: CMakeLists.txt
src/: main.cpp
src/checkers/: board.cpp  game.cpp  piece.cpp  position.cpp  soundManager.cpp  windowManager.cpp
src/checkers/modules/: board.cppm  game.cppm  piece.cppm  position.cppm  soundManager.cppm  windowManager.cppm
